# pm

./: README.md  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.ts
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pm/: MainActivity.kt
docs/: 功能.md
ios/Runner.xcodeproj/: project.pbxproj
linux/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/migration/: Cargo.toml
src-tauri/crates/migration/src/: lib.rs  m20251209_131622_create_task.rs
src-tauri/crates/pm_backend/: Cargo.toml
src-tauri/crates/pm_backend/src/: config.rs  db.rs  error.rs  lib.rs
src-tauri/crates/pm_entity/: Cargo.toml
src-tauri/crates/pm_entity/src/: error.rs  lib.rs
src-tauri/crates/pm_entity/src/task/: mod.rs
src-tauri/crates/pm_sea_orm/: Cargo.toml
src-tauri/crates/pm_sea_orm/src/: lib.rs  utils.rs
src-tauri/crates/pm_sea_orm/src/task/: mod.rs  model.rs
src-tauri/src/: lib.rs  main.rs  setup.rs  task.rs
src/apis/: task.tsx
src/layouts/: index.tsx
src/layouts/AppTitleBar/: AppTitleBar.tsx  index.module.css
src/models/: task.tsx
src/router/: index.tsx
src/utils/: datatime.ts
src/views/: plan.tsx
src/views/plan/: index.tsx  new.tsx  work.tsx
test/: widget_test.dart
web/: index.html
windows/runner/: Runner.rc
