[package]
name = "pm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "./crates/pm_backend", "crates/pm_entity", "crates/pm_sea_orm"]

[workspace.dependencies]
async-trait = "0.1"
thiserror = "2.0"
sea-orm = { version = "2.0.0-rc.20", features = ["chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

pm_backend = { path = "./crates/pm_backend"}
pm_entity = { path = "./crates/pm_entity"}
tracing-subscriber = { version = "0.3"}
tracing = { version = "0.1"}
