[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[features]
sqlite = ["sea-orm-migration/sqlx-sqlite", "pm_sea_orm/sqlite"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

pm_sea_orm = { path = "../pm_sea_orm" }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = [
  "runtime-tokio-native-tls", # `ASYNC_RUNTIME` feature
]
